--- a/.env
+++ b/.env
@@ -3,5 +3,5 @@ DATABASE_URL="postgres://postgres:your_postgres_password@localhost:5432/financia
 REACT_APP_NODE_ENV="development"
 REACT_APP_PORT=5174
 PORT=3001
-VITE_BACKEND_URL=http://127.0.0.1:3001
+VITE_BACKEND_URL=http://localhost:3001
 VITE_PORT=5174
