--- a/client/package.json
+++ b/client/package.json
@@ -48,6 +48,7 @@
         "dotenv": "^16.4.7",
         "embla-carousel-react": "^8.3.0",
         "framer-motion": "^11.13.1",
+        "helmet": "^8.1.0",
         "input-otp": "^1.2.4",
         "jspdf": "^3.0.0",
         "lucide-react": "^0.453.0",
@@ -71,6 +72,7 @@
         "@replit/vite-plugin-cartographer": "^0.0.11",
         "@replit/vite-plugin-runtime-error-modal": "^0.0.3",
         "@tailwindcss/typography": "^0.5.15",
+        "@types/helmet": "^0.0.48",
         "@types/jest": "^29.5.14",
         "@types/react": "^18.3.19",
         "@types/react-dom": "^18.3.5",
