--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "express-rate-limit": "^7.5.0",
     "express-session": "^1.18.1",
     "framer-motion": "^11.13.1",
+    "helmet": "^8.1.0",
     "input-otp": "^1.2.4",
     "jspdf": "^3.0.0",
     "lucide-react": "^0.453.0",
@@ -94,6 +95,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "4.17.21",
     "@types/express-session": "^1.18.0",
+    "@types/helmet": "^0.0.48",
     "@types/jest": "^29.5.14",
     "@types/node": "20.16.11",
     "@types/passport": "^1.0.16",
