--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,27 +1,25 @@
 {
-  "extends": "../tsconfig.json",
-  "compilerOptions": {
-    "types": ["vite/client", "node"],
-    "typeRoots": [
-      "../node_modules/@types",
-      "./node_modules/vite/types",
-      "./src/types"
+    "compilerOptions": {
+      "target": "ESNext",
+      "module": "ESNext",
+      "baseUrl": ".",
+      "paths": {
+        "@/*": ["./src/*"],
+        "@shared/*": ["../shared/*"]
+      },
+      "types": ["vite/client"],
+      "strict": true,
+      "jsx": "react-jsx",
+      "moduleResolution": "node",
+      "esModuleInterop": true,
+      "skipLibCheck": true,
+      "forceConsistentCasingInFileNames": true
+    },
+    "include": [
+      "src",
+      "../shared"
     ],
-    "paths": {
-      "@/*": ["./src/*"],
-      "@components/*": ["./src/components/*"],
-      "@pages/*": ["./src/pages/*"],
-      "@lib/*": ["./src/lib/*"],
-      "@hooks/*": ["./src/hooks/*"]
-    }
-  },
-  "include": [
-    "src/**/*.ts",
-    "src/**/*.tsx",
-    "vite.config.ts"
-  ],
-  "exclude": [
-    "node_modules",
-    "dist"
-  ]
-}
+    "exclude": [
+      "node_modules"
+    ]
+  }
