--- a/package.json
+++ b/package.json
@@ -1,22 +1,11 @@
 {
   "name": "budgetbuddy",
-  "version": "2.0.0",
-  "type": "module",
-  "license": "MIT",
+  "version": "1.0.0",
+  "private": true,
   "scripts": {
-    "dev": "concurrently -n 'BACKEND,FRONTEND' -c 'bgBlue.bold,bgGreen.bold' \"npm run server:dev\" \"npm run client:dev\"",
-    "server:dev": "tsx watch server/index.ts",
-    "client:dev": "vite",
-    "build": "npm run build:client && npm run build:server",
-    "build:client": "vite build",
-    "build:server": "tsc && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist/server",
-    "start": "NODE_ENV=production node dist/server/index.js",
-    "preview": "vite preview",
-    "check": "tsc",
-    "db:push": "drizzle-kit push",
-    "lint": "eslint . --ext .ts,.tsx --fix",
-    "format": "prettier --write .",
-    "client:start": "vite preview"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -51,30 +40,20 @@
     "@radix-ui/react-tooltip": "^1.1.3",
     "@replit/vite-plugin-shadcn-theme-json": "^0.0.4",
     "@tanstack/react-query": "^5.60.5",
-    "body-parser": "^1.20.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
-    "connect-pg-simple": "^10.0.0",
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.2.0",
     "dotenv": "^16.4.7",
-    "drizzle-orm": "^0.39.1",
-    "drizzle-zod": "^0.7.0",
     "embla-carousel-react": "^8.3.0",
-    "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
-    "express-session": "^1.18.1",
     "framer-motion": "^11.13.1",
     "helmet": "^8.1.0",
     "input-otp": "^1.2.4",
     "jspdf": "^3.0.0",
     "lucide-react": "^0.453.0",
-    "memorystore": "^1.6.7",
-    "passport": "^0.7.0",
-    "passport-local": "^1.0.0",
-    "pg": "^8.14.1",
     "react": "^18.3.1",
     "react-datepicker": "^8.2.1",
     "react-day-picker": "^8.10.1",
@@ -87,7 +66,6 @@
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.0",
     "wouter": "^3.3.5",
-    "ws": "^8.18.1",
     "xlsx": "^0.18.5",
     "zod": "^3.24.2",
     "zod-validation-error": "^3.4.0"
@@ -96,36 +74,17 @@
     "@replit/vite-plugin-cartographer": "^0.0.11",
     "@replit/vite-plugin-runtime-error-modal": "^0.0.3",
     "@tailwindcss/typography": "^0.5.15",
-    "@types/connect-pg-simple": "^7.0.3",
     "@types/cors": "^2.8.17",
-    "@types/express": "4.17.21",
-    "@types/express-session": "^1.18.0",
     "@types/helmet": "^0.0.48",
     "@types/jest": "^29.5.14",
-    "@types/node": "^20.17.27",
-    "@types/passport": "^1.0.16",
-    "@types/passport-local": "^1.0.38",
-    "@types/react": "^18.3.19",
+    "@types/node": "^22.13.13",
+    "@types/react": "^18.3.20",
     "@types/react-dom": "^18.3.5",
-    "@types/ws": "^8.5.13",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.21",
-    "concurrently": "^8.2.2",
-    "drizzle-kit": "^0.30.4",
-    "esbuild": "^0.25.0",
-    "eslint": "^8.56.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.5.3",
-    "prettier": "^3.2.5",
     "tailwindcss": "^3.4.17",
-    "ts-node-dev": "^2.0.0",
-    "tsx": "^4.19.1",
     "typescript": "5.6.3",
     "vite": "^6.2.3"
-  },
-  "optionalDependencies": {
-    "bufferutil": "^4.0.8"
   }
 }
