--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "frontend": "vite",
+    "server": "node server/index.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
