--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,20 @@
 {
   "compilerOptions": {
     "target": "ESNext",
-    "module": "CommonJS",
-    "baseUrl": ".",
-    "paths": {
-      "@shared/*": ["shared/*"]
-    },
-    "strict": true,
+    "module": "ESNext",
     "moduleResolution": "node",
+    "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "baseUrl": ".",
+    "paths": {
+      "*": ["node_modules/*", "src/types/*"] // Ensure this includes necessary paths
+    },
+    "types": ["node"]
   },
-  "include": [
-    "src",
-    "shared"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+  "include": ["src/**/*", "server/**/*", "vite.config.ts"], // Ensure this includes vite.config.ts
+  "exclude": ["node_modules"]
 }
