--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "preview": "vite preview",
     "frontend": "vite",
-    "server": "node server/index.ts"
+    "server": "node server/index.ts",
+    "start": "node server/index.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
