--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,10 @@
     },
     "dependencies": {
       "@hookform/resolvers": "^3.10.0",
-      "@radix-ui/react-*": "^1.0.0",
+      "@radix-ui/react-dialog": "^1.0.0",
+      "@radix-ui/react-dropdown-menu": "^1.0.0",
+      "@radix-ui/react-slot": "^1.0.0",
+      "@radix-ui/react-accordion": "^1.0.0",
       "@replit/vite-plugin-shadcn-theme-json": "^0.0.4",
       "@tanstack/react-query": "^5.60.5",
       "class-variance-authority": "^0.7.0",
