--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/helmet": "^0.0.48",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.13.13",
+    "@vitejs/plugin-react": "^4.3.4",
     "concurrently": "^8.2.2",
     "husky": "^8.0.3",
     "typescript": "5.6.3",
