--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@neondatabase/serverless": "^0.10.4",
+    "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-tabs": "^1.1.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
